[package]
name = "hexf-parse"
version = "0.2.1"
authors = ["Kang Seonghoon <public+rust@mearie.org>"]

description = "Parses hexadecimal floats (see also hexf)"
homepage = "https://github.com/lifthrasiir/hexf"
documentation = "https://docs.rs/hexf-parse/"
repository = "https://github.com/lifthrasiir/hexf"
license = "0BSD"
edition = "2018"

[features]
default = ["half"]
half = ["dep:half", "dep:num-traits"]

[dependencies]
libm = "0.2.2"
num-traits = { version = "0.2.14", optional = true }
half = { version = "2.1.0", features=["num-traits"], optional = true }
